--- a/resources/sass/partials/_advancedsearch.scss
+++ b/resources/sass/partials/_advancedsearch.scss
@@ -7,12 +7,11 @@
 }
 
 .search-as {
-    width: 20%;
+    width: 80%;
     border-radius: 10px;
     padding: 10px;
     font-size: small;
     font-weight: bold;
-    margin-right: 10px;
 }
 
 .stanze-letti {
@@ -30,7 +29,12 @@
     display: flex;
     flex-wrap: wrap;
 }
-
+.advanced{
+    justify-content: space-around;
+    padding: 30px 0;
+    margin: 0 auto;
+    width: 90%;
+}
 .card-as {
     color: rgb(113, 113, 113) !important;
         font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif !important;
@@ -111,16 +115,7 @@
 .search-bar-as{
     flex-wrap: wrap;
 }
-.filters-as{
-    span{
-        *{
-            margin: 0;
-        }
-    }
-    *{
-        margin-left:10px;
-    }
-}
+
 @media screen and (min-width: 1024px) {
     .card {
         .form-control {
