--- a/public/css/app.css
+++ b/public/css/app.css
@@ -603,6 +603,7 @@ ul {
 }
 
 .nav {
+  max-width: 100vw;
   z-index: 10;
   background-color: #ffffff;
   position: fixed;
@@ -1431,10 +1432,6 @@ select::-webkit-file-upload-button {
   height: 100%;
 }
 
-.container-as {
-  padding: 50px 5%;
-}
-
 .search-as {
   width: 80%;
   border-radius: 10px;
@@ -1453,7 +1450,6 @@ select::-webkit-file-upload-button {
 
 .container-cards-as {
   width: 100%;
-  padding: 50px 0;
   justify-content: space-between;
   display: flex;
   flex-wrap: wrap;
@@ -1569,27 +1565,11 @@ select::-webkit-file-upload-button {
   .search-bar-as div {
     display: block;
   }
-
-  .search-as {
-    margin-bottom: 15px;
-    width: 50%;
-    text-align: center;
-  }
 }
 
 @media screen and (max-width: 680px) {
   .search-bar-as span {
     display: block;
-    margin-bottom: 15px;
-  }
-
-  .search-as {
-    margin: 0;
-    width: 50vw;
-    margin-bottom: 15px;
-  }
-
-  #filter {
     margin-bottom: 15px;
   }
 
@@ -1628,7 +1608,7 @@ select::-webkit-file-upload-button {
   }
 }
 
-@media screen and (max-width: 423px) {
+@media screen and (max-width: 420px) {
   .card-as {
     width: calc(100% - 20px);
   }
@@ -1637,8 +1617,23 @@ select::-webkit-file-upload-button {
     justify-content: center;
   }
 
-  .search-as {
-    width: 80vw;
+  #filter {
+    display: flex !important;
+    align-items: center;
+  }
+
+  body > main > div > div > div > div.flex.advanced > div.filters-as.flex.posrev {
+    margin: 0;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+
+  body > main > div > div > div > div.flex.advanced > div.filters-as.flex.posrev .flex {
+    margin: 0;
+  }
+
+  body > main > div > div > div > div.flex.advanced > div.filters-as.flex.posrev > * {
+    margin: 0.1rem auto;
   }
 }
 
