--- a/resources/sass/partials/_edit.scss
+++ b/resources/sass/partials/_edit.scss
@@ -182,3 +182,9 @@ input[type="file"] {
 .direction {
     flex-direction: column;
 }
+
+.custom-margin-create {
+    .custom{
+        width: 90%;
+    }
+}
