--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1071,7 +1071,12 @@ input[type=file] {
   flex-direction: column;
 }
 
+.custom-margin-create .custom {
+  width: 90%;
+}
+
 .padding-show {
+  min-width: 100%;
   padding: 30px;
 }
 
@@ -1089,6 +1094,7 @@ input[type=file] {
 .info-show {
   margin-left: 20px;
   font-size: 15px;
+  justify-content: space-between;
 }
 
 .icons-absolute {
@@ -1115,6 +1121,33 @@ input[type=file] {
 
 .color-show {
   color: #ff385c;
+}
+
+.show-services {
+  color: #ff385c;
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+}
+
+.show-services ul {
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+}
+
+.show-services ul li {
+  color: #000;
+  border: 1px solid lightgray;
+  padding: 0.35rem;
+  border-radius: 0.5rem;
+  box-shadow: 5px 5px 10px 0px lightgrey;
+  margin-top: 0.2rem;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  opacity: 0.8;
+  margin-right: 0.3rem;
 }
 
 * {
