--- a/resources/sass/partials/_apartments.scss
+++ b/resources/sass/partials/_apartments.scss
@@ -83,3 +83,11 @@ ul {
     background-color: $color-accent;
     color: white;
 }
+
+.listaptimg{
+    width: 120px;
+    height: 120px;
+    margin-right: 20px;
+    margin-left: 20px;
+    border-radius: 10px;
+}
