--- a/resources/sass/partials/_showlogged.scss
+++ b/resources/sass/partials/_showlogged.scss
@@ -10,7 +10,13 @@
     border-radius: 30px;
     text-align: center;
     width: 25%;
-    margin-top: 20px;
+    margin: 20px 0;
+}
+
+.aptimg{
+    width: 300px;
+    z-index: 1;
+    border-radius: 10px;
 }
 
 .info-show {
