--- a/resources/sass/partials/_sponsorship.scss
+++ b/resources/sass/partials/_sponsorship.scss
@@ -1,3 +1,7 @@
+.margin-section{
+    margin-top: 3rem;
+}
+
 .sponsorship-card{
         width: calc((100% / 3) - 100px )  ;
         padding: 2.5rem;
