--- a/resources/sass/partials/_landingpage.scss
+++ b/resources/sass/partials/_landingpage.scss
@@ -84,11 +84,9 @@
                 top: 5%;
                 left: 5%;
                 z-index: 10;
-                color: white;
+                background-color: white;
                 padding: 5px;
-                border: 1px solid white;
-                border-radius: 10px;
-                text-shadow: 1px 1px 1px $color-accent;
+                border-radius: 30px;
             }
         }
 
@@ -109,23 +107,18 @@
             width: 90%;
             margin-top: auto;
             padding: 0px 10px 20px 10px;
-
             .index-btn {
                 padding: 5px;
                 color: $color-accent;
                 width: 100%;
                 border-radius: 10px;
-                border: 1px solid lightgray;
-                border-radius: 10px;
                 box-shadow: 5px 5px 10px 0px lightgray;
                 margin-top: 16px;
                 text-decoration: none;
-
+                transition: 0.3s;
                 &:hover {
-                    -webkit-box-shadow: 0 0 5px 2px $color-gray-1-hover;
-                    -moz-box-shadow: 0 0 5px 2px $color-gray-1-hover;
-                    box-shadow: 0 0 5px 2px $color-gray-1-hover;
-                    border: 1px solid gray;
+                    color: white;
+                    background-color: $color-accent;
                 }
             }
         }
