--- a/resources/sass/partials/_navbarside.scss
+++ b/resources/sass/partials/_navbarside.scss
@@ -8,9 +8,6 @@
         // display: block;
         position: relative;
         height: 60px;
-        max-width: 1050px;
-        width: 90%;
-        margin: auto;
         margin-top: -12px;
         padding: 0 !important;
 
@@ -71,10 +68,10 @@
                 transition: transform 0.4s ease-in-out;
             }
         }
-        
+
         input[type="checkbox"]:checked ~ .menu-items {
-            transform: translateX(0);
-            width: 25vw;
+            transform: translateX(-300px);
+            width: 30vw;
         }
 
         input[type="checkbox"]:checked ~ .hamburger-lines .line1 {
@@ -95,24 +92,26 @@
 
         .menu-items {
             color: $color-accent !important;
+            position: absolute;
             display: flex;
-            padding-top: 120px;
+            padding: 80px;
             height: 100vh;
-            width: 100%;
-            transform: translate(-150%);
+            align-items: center;
+            transform: translate(-200%);
             flex-direction: column;
             margin-left: -40px;
-            padding-left: 50px;
             transition: transform 0.5s ease-in-out;
             background-color: $dirty-white;
 
             .logo {
+                margin-bottom: 2rem;
                 padding-left: 7px;
                 padding-bottom: 12px;
             }
 
             li {
-                margin-bottom: 1.2rem;
+                display: block;
+                margin: 1.2rem;
                 font-size: 20px;
                 font-weight: 500;
             }
@@ -138,5 +137,118 @@
     a {
         display: flex;
         align-items: center;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .button_accent {
+        padding: 10px 5px;
+        width: fit-content;
+    }
+    .title {
+        justify-content: space-between !important;
+    }
+    .navbar {
+        .nav-container {
+            input[type="checkbox"]:checked ~ .menu-items {
+                transform: translateX(0px);
+                width: 70vw;
+            }
+            .menu-items {
+                min-height: 100%;
+                padding: 10px;
+                width: 0vw;
+            }
+        }
+    }
+}
+
+@media screen and(max-width: 1600px) {
+    .navbar {
+        .nav-container {
+            input[type="checkbox"]:checked ~ .menu-items {
+                transform: translateX(-200px);
+                width: 30vw;
+            }
+            .menu-items {
+                padding: 20px;
+            }
+        }
+    }
+}
+
+@media screen and(max-width: 1200px) {
+    .navbar {
+        .nav-container {
+            input[type="checkbox"]:checked ~ .menu-items {
+                transform: translateX(-100px);
+                width: 30vw;
+            }
+            .menu-items {
+                padding: 20px;
+            }
+        }
+    }
+}
+
+@media screen and(max-width: 900px) {
+    .navbar {
+        .nav-container {
+            input[type="checkbox"]:checked ~ .menu-items {
+                transform: translateX(-50px);
+                width: 40vw;
+            }
+            .menu-items {
+                padding: 20px;
+                padding-top: 100px;
+            }
+            .logo {
+                display: none;
+            }
+        }
+    }
+}
+
+@media screen and(max-width: 700px) {
+    .navbar {
+        .nav-container {
+            input[type="checkbox"]:checked ~ .menu-items {
+                transform: translateX(-50px);
+                width: 40vw;
+            }
+            .menu-items {
+                padding: 20px;
+                padding-top: 100px;
+            }
+        }
+    }
+}
+
+@media screen and(max-width: 700px) {
+    .navbar {
+        .nav-container {
+            input[type="checkbox"]:checked ~ .menu-items {
+                transform: translateX(-50px);
+                width: 70vw;
+            }
+            .menu-items {
+                padding: 20px;
+                padding-top: 100px;
+            }
+        }
+    }
+}
+@media screen and(max-width: 420px) {
+    .navbar {
+        .nav-container {
+            input[type="checkbox"]:checked ~ .menu-items {
+                transform: translateX(30px);
+                width: 70vw;
+            }
+            .menu-items {
+                padding: 20px;
+                padding-top: 100px;
+            }
+        }
     }
 }
