--- a/public/css/app.css
+++ b/public/css/app.css
@@ -358,9 +358,29 @@ ul {
 }
 
 @media screen and (max-width: 700px) {
+  .global-padding {
+    padding: 30px;
+  }
+
+  .statistics-padding {
+    margin: 0;
+    width: 100% !important;
+  }
+
   .statistics .cards {
     align-items: center;
     flex-direction: column;
+  }
+
+  .statistics .cards .wrap.description {
+    width: 100% !important;
+    padding: 0;
+    margin: 0;
+    margin-top: 1.5rem;
+  }
+
+  .statistics .cards button {
+    margin-top: 1.5rem;
   }
 }
 
@@ -768,7 +788,6 @@ ul {
   padding: 10px;
   border-radius: 30px;
   text-align: center;
-  width: 25%;
   margin-top: 35px;
   margin-bottom: 35px;
 }
@@ -982,7 +1001,6 @@ input[type=file] {
   padding: 10px;
   border-radius: 30px;
   text-align: center;
-  width: 25%;
   margin-top: 35px;
   margin-bottom: 35px;
 }
@@ -1192,6 +1210,10 @@ input[type=file] {
 
 .custom-margin-create .custom {
   width: 90%;
+}
+
+#app form > * {
+  margin: 0;
 }
 
 .padding-show {
