--- a/resources/sass/partials/_dashboard.scss
+++ b/resources/sass/partials/_dashboard.scss
@@ -78,10 +78,26 @@
 }
 
 @media screen and (max-width: 700px) {
+    .global-padding{
+        padding: 30px;
+    }
+    .statistics-padding{
+        margin: 0;
+        width: 100% !important;
+    }
     .statistics {
         .cards {
             align-items: center;
             flex-direction: column;
+            .wrap.description{
+                width: 100%!important;
+                padding: 0;
+                margin:0 ;
+                margin-top: 1.5rem;
+            }
+            button{
+                margin-top: 1.5rem;
+            }
         }
     }
 }
