--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -37,3 +37,15 @@
     box-sizing: border-box;
     font-family: "Segoe", sans-serif;
 }
+
+::-webkit-scrollbar{
+    width: 5px;
+}
+
+::-webkit-scrollbar-track{
+    background-color: lightgray;
+}
+
+::-webkit-scrollbar-thumb{
+    background-color: $color-accent;
+}
